Bug 72946 - Clients render incorrectly when output is reassigned after original output unplugged.
Summary: Clients render incorrectly when output is reassigned after original output un...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-21 07:10 UTC by Anu Reddy
Modified: 2014-05-06 21:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Incorrect display error on hot unplug (17.17 KB, image/png)
2013-12-21 07:10 UTC, Anu Reddy
Details
Incorrect display on hot unplug secondary display (17.17 KB, image/png)
2013-12-21 07:16 UTC, Anu Reddy
Details

Description Anu Reddy 2013-12-21 07:10:15 UTC
Created attachment 91075 [details]
Incorrect display error on hot unplug

Steps:
1.  Two cold plugged displays running on weston 
2.  Identify primary display(display1) and secondary display(display2)
3.  Open two weston terminals on display1 : Weston-terminal 
4.  Hot unplug the primary display (display1) 

Expected result:
Secondary display (display2 ) should become the primary display and terminal windows need to be displayed correctly.  

Actual Result:
In the display2 only out line of terminals are displayed, refer to the attachment.


Environment :

Kernel:3.9.5-301.fc19.x86_64
wayland (HEAD) 1.3.91-0-g01bde63
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g6f7da01
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/master-0-gdf42a80
efl (HEAD) remotes/origin/efl-1.8-0-g90c2320
elementary (HEAD) remotes/origin/elementary-1.8-0-ge077db6
wayland-fits (HEAD) remotes/origin/HEAD-0-gcd75d94
Comment 1 Anu Reddy 2013-12-21 07:16:56 UTC
Created attachment 91076 [details]
Incorrect display on hot unplug secondary display
Comment 2 Ander Conselvan de Oliveira 2014-04-09 13:46:34 UTC
I think Xiong sent a patch to the list that fixes this issue:

http://lists.freedesktop.org/archives/wayland-devel/2014-March/013567.html
Comment 3 Kristian Høgsberg 2014-04-30 18:02:49 UTC
(In reply to comment #2)
> I think Xiong sent a patch to the list that fixes this issue:
> 
> http://lists.freedesktop.org/archives/wayland-devel/2014-March/013567.html

Indeed, that fixes it:

commit 62899f512482241cbadf472840a2a2f38c907378
Author: Xiong Zhang <xiong.y.zhang@intel.com>
Date:   Fri Mar 7 16:27:19 2014 +0800

    shell.c: Set dirty for visible views on destroyed output
    
    The geometry for visible views will keep unchanged,
    weston_view_set_position() doesn't mark these views
    as dirty. So there is no chance for them to reassign output, then
    these views will disappear.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=72946
    
    Signed-off-by: Xiong Zhang <xiong.y.zhang@intel.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.